@@ -5,6 +5,11 @@
   * Add 'dulwich.mailmap' file for reading mailmap files.
     (Jelmer Vernooĳ)
 
+ API CHANGES
+
+  * Index.iterblobs has been renamed to Index.iterobjects.
+   (Jelmer Vernooĳ)
+
 0.19.0	2018-03-10
 
  BUG FIXES
